[package]
name = "paperboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16"
reqwest = { version = "0.11.16", features = ["blocking"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
